Animal sound added

--- a/audio.html
+++ b/audio.html
@@ -30,6 +30,7 @@
     <!-- main section -->
     <main>
     <div class="down">
+        <h1>Sound</h1>
 <img class="icon" src="spotify/Bird.jpg" alt="" width="50px" height="50px">
 <audio controls src="spotify/cardinal-37075.mp3"></audio><br>
 <img class="icon" src="spotify/Tiger.jpg" alt="" width="50" height="50">
@@ -37,8 +38,11 @@
 <img class="icon" src="spotify/Fish.jpg" alt="" width="50px" height="50px">
 <audio controls src="spotify/fish-in-river-6114.mp3"></audio><br>
 <img class="icon" src="spotify/monkeys.jpg" alt="" height="50" width="50">
-<audio controls src="spotify/monkey-scream-6407.mp3"></audio>
+<audio controls src="spotify/monkey-scream-6407.mp3"></audio><br>
+<img class="icon" src="spotify/horse.jpeg" alt="" height="50" width="50">
+<audio controls src="spotify/horse-123782.mp3"></audio>
     </div>
+
     </main>
     <!-- main section end -->
 </body>
